--- a/TODO
+++ b/TODO
@@ -3,7 +3,9 @@ TODO
 1. Implement sitelinks.
 api.php?action=wbeditentity&id=Q42&data={"sitelinks":{"nowiki":{"site":"nowiki","title":"København"}}}
 3. Kdyz se snazim vytvorit polozku, ktera uz existuje, tak mi to hodi error.
-4.
+4. Po udelani Wikidata::Datatype prepsan na to.
+Aktualne neni podpora hromady datovych typu
+5.
 
 Applied
 =======
