--- a/TODO
+++ b/TODO
@@ -3,7 +3,8 @@ TODO
 3. Kdyz se snazim vytvorit polozku, ktera uz existuje, tak mi to hodi error.
 5. Testy.
 6. Existuje nejake volani, ktere jenom prelozi qid na label v jazyku?
-7.
+7. Doc pro Resolve.pm
+8.
 
 Applied
 =======
