Rewrite to better initialization
Constructor not connect to network

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.03
  - Fix abstract in doc.
+ - Rewrite to better initialization. Constructor not connect to network.
 
 0.02 2022-10-18T10:56:15+02:00
  - Add check for existing type.
