--- a/TODO
+++ b/TODO
@@ -18,7 +18,8 @@ TODO
     missing   ""
 }
 I added check for type, but what's happening?
-14.
+14. Method add_statement()?
+15.
 
 Applied
 =======
