--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.05
  - Add constructor tests.
+ - Add summary to create_item().
  - Fix depdendencies.
  - Fix error output, could be utf8.
  - Improve doc in Wikibase::API.
