--- a/TODO
+++ b/TODO
@@ -19,7 +19,8 @@ TODO
 }
 I added check for type, but what's happening?
 14. Method add_statement()?
-15.
+15. Verbose mode
+16.
 
 Applied
 =======
