--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.07
+ - Set minimal version of Struct::Lexeme to create lexeme on Wikidata.
 
 0.06 2024-11-10T14:55:41+01:00
  - Add support of creating of lexeme.
