--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.08
+ - Update copyright years.
 
 0.07 2024-11-11T18:38:17+01:00
  - Set minimal version of Struct::Lexeme to create lexeme on Wikidata.
